--- a/wordle/pubspec.yaml
+++ b/wordle/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.6
   shared_preferences: ^2.2.0
   provider: ^6.1.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - .env
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
