--- a/wordle/pubspec.yaml
+++ b/wordle/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  image_picker: ^1.0.4
   http: ^0.13.6
+  path_provider: ^2.1.1
+  path: ^1.8.3
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   flutter_dotenv: ^5.1.0
@@ -68,6 +71,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - .env
+    - assets/default_avatar.png
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
