--- a/wordle-backend/.env_template
+++ b/wordle-backend/.env_template
@@ -1,5 +1,6 @@
 # Rename this file to .env and paste your MongoDB URI and JWT Secret Key below.
 
+PORT =
 MONGO_URI=
 MONGO_URI_DOCKER
 JWT_SECRET=
