--- a/wordle-backend/Dockerfile
+++ b/wordle-backend/Dockerfile
@@ -3,7 +3,7 @@
 #
 # Author: Emmanuel Taylor
 # Created: April 3, 2025
-# Modified: April 3, 2025
+# Modified: April 5, 2025
 # 
 # Description:
 #   - Dockerfile for the Wordle backend service. It builds a Node.js container
@@ -13,10 +13,23 @@
 #   - node:18 (Official Node.js LTS image from Docker Hub)
 ######################################################################################################
 
-FROM node:18
+# Use official Node.js LTS version as base image.
+FROM node:18                  
+
+# Sets the working directory inside the container.
 WORKDIR /app
+
+# Copy package filse first to leverage the Docker cache.
 COPY package*.json ./
+
+# Install application dependencies.
 RUN npm install
+
+# Copy the rest of the application source code.
 COPY . .
+
+# Expose the port the server will run on.
 EXPOSE 3000
+
+# Define the default command to run the application.
 CMD [ "node", "server.js" ]
